.apex/unpackaged/objects/Photo__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Examination__c</fullName>
        <label>Examination</label>
        <referenceTo>Examination__c</referenceTo>
        <relationshipLabel>Photos</relationshipLabel>
        <relationshipName>Photos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Photo</label>
    <nameField>
        <displayFormat>PH-{0000}</displayFormat>
        <label>Photo Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Photos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>